# mailing_service

./: .gitignore  Makefile  README.md  data_dump.json  db_procces.py  pyproject.toml
blog/: admin.py  models.py
blog/managers/: __init__.py  post_manager.py
blog/migrations/: 0001_initial.py
common/: models.py  utils.py
config/: settings.py  urls.py
mailing/: admin.py  constants.py  cron.py  models.py  urls.py  views.py  views_mixins.py
mailing/forms/: mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingsettings_status.py  0002_initial.py  0003_client_owner_mailingsettings_owner_mailmessage_owner.py  0004_mailingsettings_is_active.py  0005_alter_mailingsettings_is_active.py  0006_alter_mailingsettings_options.py
mailing/querysets/: clients.py  mailings.py
mailing/services/: decorators.py  mailing_run_service.py
mailing/static/: aria-current.js
mailing/templates/mailing/: base.html  client_create.html  client_detail.html  client_update.html  clients_list.html  index.html  mailing_create.html  mailing_detail.html  mailing_update.html  mailings_list.html  message_create.html  message_detail.html  message_update.html  messages_list.html  paginator.html
users/: forms.py  models.py  signals.py  urls.py  views.py  views_mixins.py
users/migrations/: 0001_initial.py  0002_confirmationcode.py  0003_userprofile.py  0004_remove_userprofile_id_alter_userprofile_user.py
users/services/: email_confirm.py
users/templates/users/: confirmation_code_form.html  user_login.html  user_profile.html  user_registration.html  users_list.html
