[tool.poetry]
name = "mail-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1"
django-ckeditor = "^6.7.0"
envparse = "^0.2.0"
psycopg2 = "^2.9.9"
django-crontab = "^0.7.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
